src/objects/Redwood_Contract__c.object
<CustomObject>
    <description>Redwood Contract Management</description>
    <fields>
        <fullName>Audit_Requirements_Categories__c</fullName>
        <label>Audit Requirements Categories</label>
        <picklist>
            <controllingField>Audit_Requirements__c</controllingField>
            <picklistValues>
                <fullName>A-133</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licensing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stand Alone Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UFR</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Audit_Requirements_Detail__c</fullName>
        <label>Audit Requirements Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Audit_Requirements__c</fullName>
        <label>Audit Requirements</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>AZ MENTOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California Mentor Family Home Agency, LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA MENTOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corner Stone Living</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Step Independent Living, Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Horrigan Cole Enterprises, Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois Mentor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN MENTOR ADULT FOSTERCARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN Supported Living</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loyds Liberty Homes, Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND Transitional Services, LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OR DSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REM Arrowhead, Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REM Central Lakes, Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REM Community Options, Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REM Developmental Services, Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REM Heartland, Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REM Hennepin, Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REM Indiana, Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REM Iowa, Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REM Iowa Community Services, Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REM Minnesota Community Services, Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REM Nevada, Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REM North Dakota, Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REM North Star, Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REM Ohio, Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REM Ramsey, Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REM River Bluffs, Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REM South Central Services, Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REM Southwest Services, Inc</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Clsoed_Reason__c</fullName>
        <label>Closed Reason</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Non-Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rates Do Not Support Service Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost Bid to Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchaser Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContractID__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>ContractID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Value_Type__c</fullName>
        <label>Contract Value (Type)</label>
        <picklist>
            <picklistValues>
                <fullName>Estimated - Annual Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stated - Full Contract Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Contract Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Report_Details__c</fullName>
        <label>Cost Report Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Report_Frequency__c</fullName>
        <label>Cost Report Frequency</label>
        <picklist>
            <controllingField>Cost_Report__c</controllingField>
            <picklistValues>
                <fullName>Annual (Calendar)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual (Fiscal)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost_Report__c</fullName>
        <label>Cost Report</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Day_since_Start__c</fullName>
        <formula>today()- Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day since Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysRemaining__c</fullName>
        <formula>IF(Termination_Date__c -today()&lt;0, 0,Termination_Date__c -today() )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Initial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issuing_Agency_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Issuing Agency Contact</label>
        <referenceTo>Issuing_Agency_Contact__c</referenceTo>
        <relationshipLabel>Redwood Contracts</relationshipLabel>
        <relationshipName>Redwood_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issuing_Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Issuing Agency</label>
        <referenceTo>IssuingAgency__c</referenceTo>
        <relationshipLabel>Redwood Contracts</relationshipLabel>
        <relationshipName>Redwood_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Contract</label>
        <referenceTo>Redwood_Contract__c</referenceTo>
        <relationshipLabel>Redwood Contracts (Next Contract)</relationshipLabel>
        <relationshipName>Redwood_Contracts_Next</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Open_Ended_Termination_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Open Ended Termination Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operating_Group__c</fullName>
        <label>Operating Group</label>
        <picklist>
            <picklistValues>
                <fullName>Redwood</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Contract</label>
        <referenceTo>Redwood_Contract__c</referenceTo>
        <relationshipLabel>Redwood Contracts</relationshipLabel>
        <relationshipName>Redwood_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Category__c</fullName>
        <label>Program Category</label>
        <picklist>
            <picklistValues>
                <fullName>ABI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Disability / Medical Condition / Sensory Impairments</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rate_Structure__c</fullName>
        <label>Rate Structure</label>
        <picklist>
            <picklistValues>
                <fullName>Billable Units</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hourly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Diem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Session</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Renewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required_Termination_Notice_Other__c</fullName>
        <label>Required Termination Notice - Other</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Termination_Notice__c</fullName>
        <label>Required Termination Notice</label>
        <picklist>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Line_Type__c</fullName>
        <label>Service Line Type</label>
        <picklist>
            <controllingField>Service_Line__c</controllingField>
            <picklistValues>
                <fullName>Brokerage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Host Homes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supp. Living / IHSS / Ind Living (hrly)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vocational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiver Group Homes</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Service_Line__c</fullName>
        <label>Service Line</label>
        <picklist>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Residential (Periodic)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Placement Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Going</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Start Up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Termination_Date2__c</fullName>
        <formula>Termination_Date__c</formula>
        <label>Termination Date (Group)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TotalDays__c</fullName>
        <formula>Termination_Date__c - Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_Type_Number__c</fullName>
        <inlineHelpText>If the &apos;Value Type&apos; is Max obligation or # of slots, enter the associated numeric value in this field.</inlineHelpText>
        <label>Value Type (Number)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_Type__c</fullName>
        <label>Value Type</label>
        <picklist>
            <picklistValues>
                <fullName>No Ceiling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName># of Slots</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Max Obligation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Redwood Contract</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contract_Number__c</columns>
        <columns>Description__c</columns>
        <columns>DaysRemaining__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Termination_Date__c</columns>
        <columns>Status__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Expired</fullName>
        <columns>NAME</columns>
        <columns>Contract_Number__c</columns>
        <columns>Description__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Termination_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>DaysRemaining__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Expired</label>
    </listViews>
    <listViews>
        <fullName>X30</fullName>
        <columns>NAME</columns>
        <columns>Contract_Number__c</columns>
        <columns>Description__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Termination_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DaysRemaining__c</field>
            <operation>lessThan</operation>
            <value>31</value>
        </filters>
        <filters>
            <field>DaysRemaining__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>DaysRemaining__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>30</label>
    </listViews>
    <listViews>
        <fullName>X60</fullName>
        <columns>NAME</columns>
        <columns>Contract_Number__c</columns>
        <columns>Description__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Termination_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DaysRemaining__c</field>
            <operation>lessThan</operation>
            <value>61</value>
        </filters>
        <filters>
            <field>DaysRemaining__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>DaysRemaining__c</field>
            <operation>greaterThan</operation>
            <value>30</value>
        </filters>
        <label>60</label>
    </listViews>
    <listViews>
        <fullName>X90</fullName>
        <columns>NAME</columns>
        <columns>Contract_Number__c</columns>
        <columns>Description__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Termination_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DaysRemaining__c</field>
            <operation>lessThan</operation>
            <value>91</value>
        </filters>
        <filters>
            <field>DaysRemaining__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>DaysRemaining__c</field>
            <operation>greaterThan</operation>
            <value>60</value>
        </filters>
        <label>90</label>
    </listViews>
    <nameField>
        <label>Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Redwood Contracts</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Detail_Audit</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Audit_Requirements_Detail__c ) &amp;&amp; ISPICKVAL( Audit_Requirements__c , &apos;Yes&apos;)</errorConditionFormula>
        <errorDisplayField>Audit_Requirements_Detail__c</errorDisplayField>
        <errorMessage>please provide some detail to the audit requirements</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Detail_Cost_Report</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(  Cost_Report_Details__c ) &amp;&amp; ISPICKVAL(  Cost_Report__c , &apos;Yes&apos;)</errorConditionFormula>
        <errorDisplayField>Cost_Report_Details__c</errorDisplayField>
        <errorMessage>please provide some detail to the cost report requirements requirements</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Initial_contract_with_previous</fullName>
        <active>true</active>
        <errorConditionFormula>Initial__c &amp;&amp; !ISBLANK( Previous_Contract__c )</errorConditionFormula>
        <errorDisplayField>Initial__c</errorDisplayField>
        <errorMessage>this contract has a previous contract associated with it, it can&apos;t be set as initial</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Open_Ended_Termination_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Open_Ended_Termination_Date__c &amp;&amp; !ISBLANK( Termination_Date__c )</errorConditionFormula>
        <errorDisplayField>Termination_Date__c</errorDisplayField>
        <errorMessage>When selecting Open Ended Termination Date the Termination date filed must be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Term_date_less_than_start</fullName>
        <active>true</active>
        <errorConditionFormula>Termination_Date__c  &lt; Start_Date__c</errorConditionFormula>
        <errorDisplayField>Termination_Date__c</errorDisplayField>
        <errorMessage>termination date can not before start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Unknown_with_a_value</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Contract_Value_Type__c, &apos;Unknown&apos;) &amp;&amp; !ISBLANK( Contract_Value__c )</errorConditionFormula>
        <errorDisplayField>Contract_Value__c</errorDisplayField>
        <errorMessage>When selecting unknown as a value type the value filed must be blank</errorMessage>
    </validationRules>
</CustomObject>